# duatic_dynaarm

./: .gitattributes  .pre-commit-config.yaml  README.md  repos.list
.github/workflows/: build-jazzy.yml  build-kilted.yml  build-lyrical.yml  build-rolling.yml
duatic_dynaarm_bringup/: CMakeLists.txt  package.xml
duatic_dynaarm_bringup/launch/: mock.launch.py  real.launch.py  sim.launch.py
duatic_dynaarm_controllers/: CMakeLists.txt  controller_interface_plugin.xml
duatic_dynaarm_demo/: README.md
duatic_dynaarm_demo/duatic_dynaarm_single_example/duatic_dynaarm_single_example/: CMakeLists.txt  package.xml
duatic_dynaarm_demo/duatic_dynaarm_single_example/duatic_dynaarm_single_example_description/: CMakeLists.txt
duatic_dynaarm_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
duatic_dynaarm_description/launch/: view.launch.py
duatic_dynaarm_description/meshes/arowana4/: base_cover_mesh.dae  base_detailed_mesh.dae  base_mesh.dae  elbow_cover_mesh.dae  elbow_detailed_mesh.dae  elbow_mesh.dae  forearm_cover_mesh.dae  forearm_detailed_mesh.dae  forearm_mesh.dae  shoulder_cover_mesh.dae  shoulder_detailed_mesh.dae  (+9 more)
duatic_dynaarm_description/urdf/: dynaarm.urdf.xacro
duatic_dynaarm_driver/: CMakeLists.txt  README.md
duatic_dynaarm_driver/doc/: index.md
duatic_dynaarm_driver/urdf/: dynaarm.ros2control.xacro  dynaarm.urdf.xacro
duatic_dynaarm_testing/: README.md  package.xml  setup.cfg  setup.py
duatic_dynaarm_testing/duatic_dynaarm_testing/: __init__.py  automation.py  models.py  report.py  run_tests.py  runner.py  suites.py
(+32 files in other folders)
