<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_dynaarm_testing</name>
  <version>1.0.0</version>
  <description>DynaArm functional safety testing CLI</description>

  <author email="mbloechlinger@duatic.com">Marc Blöchlinger</author>
  <maintainer email="mbloechlinger@duatic.com">Marc Blöchlinger</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>duatic_dynaarm_single_example</exec_depend>
  <exec_depend>duatic_gamepad_interface</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
